test/tests/compiler/8_loops/valid/for_absent_condition.plx
pub fn main(none) i32 {
    loop i: i32 = 400 .. i = i - 100 {
        if i == 100 {
            return 0
        }
    }
}

