test/tests/compiler/8_loops/invalid_parse/plx1_loop_no_block_2.plx
pub fn main(none) i32 {
    loop
    return 0
}
